feat : add user profile and delete recommendation
